# wggen

./: .gitignore  pyproject.toml
wggen/: __main__.py  client.py  group.py  server.py
wggen/generation/: __init__.py  generator.py  key.py  wg_config.py
